--- a/TaskManagerFrontEnd/src/app/components/task-form/task-form.component.html
+++ b/TaskManagerFrontEnd/src/app/components/task-form/task-form.component.html
@@ -1,1 +1,20 @@
-<p>task-form works!</p>
+<form (ngSubmit)="submitTask()" class="text-center">
+  <div class="mb-3">
+    <label class="form-label fw-bold">Title</label>
+    <input type="text" class="form-control" [(ngModel)]="task.title" name="title" required>
+  </div>
+
+  <div class="mb-3">
+    <label class="form-label fw-bold">Description</label>
+    <textarea class="form-control" [(ngModel)]="task.description" name="description"></textarea>
+  </div>
+
+  <div class="mb-3">
+    <label class="form-label fw-bold">Due Date</label>
+    <input type="date" class="form-control" [(ngModel)]="task.dueDate" name="dueDate" required>
+  </div>
+
+  <button type="submit" class="btn btn-primary w-100">
+    <i class="bi bi-plus-circle"></i> Add Task
+  </button>
+</form>
