Remove rocket logo

--- a/TaskManagerFrontEnd/src/app/app.component.html
+++ b/TaskManagerFrontEnd/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex flex-column align-items-center justify-content-center min-vh-100">
   <h1 class="text-primary text-center">
-    <img src="/src/assets/rocket.png" alt="Task Manager Logo" width="50" class="me-2">
+    <!-- <img src="/src/assets/rocket.png" alt="Task Manager Logo" width="50" class="me-2"> -->
     Task Manager
   </h1>
 
@@ -23,4 +23,4 @@
       <app-task-list></app-task-list>
     </div>
   </div>
-</div>
+</div>  
