Success message and auto refresh the list once new task added

--- a/TaskManagerFrontEnd/src/app/components/task-form/task-form.component.html
+++ b/TaskManagerFrontEnd/src/app/components/task-form/task-form.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="showSuccessMessage" class="alert alert-success text-center" role="alert">
+  Task added successfully!
+</div>
+
 <form (ngSubmit)="submitTask()" class="text-center">
   <div class="mb-3">
     <label class="form-label fw-bold">Title</label>
