--- a/TaskManagerFrontEnd/src/app/app.component.html
+++ b/TaskManagerFrontEnd/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="container d-flex flex-column align-items-center justify-content-center min-vh-100">
   <h1 class="text-primary text-center">
-    <!-- <img src="/src/assets/rocket.png" alt="Task Manager Logo" width="50" class="me-2"> -->
     Task Manager
   </h1>
 
@@ -10,7 +9,7 @@
       <strong>Add a New Task</strong>
     </div>
     <div class="card-body">
-      <app-task-form></app-task-form>
+      <app-task-form (taskAdded)="taskList.onTaskAdded()"></app-task-form>
     </div>
   </div>
 
@@ -20,7 +19,7 @@
       <strong>Task List</strong>
     </div>
     <div class="card-body">
-      <app-task-list></app-task-list>
+      <app-task-list #taskList></app-task-list>
     </div>
   </div>
-</div>  
+</div>
